--- a/cs-client/package.json
+++ b/cs-client/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@webcomponents/custom-elements": "^1.2.1",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "gsap": "^2.0.2",
+    "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
     "svg-morph": "0.0.0",
     "zone.js": "~0.8.26"
