--- a/cs-server/package.json
+++ b/cs-server/package.json
@@ -9,14 +9,15 @@
   "author": "ThongND",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
     "async": "^2.5.0",
     "body-parser": "^1.17.2",
-    "cors": "^2.8.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^7.4.2",
     "md5": "^2.2.1",
     "path": "^0.12.7",
     "xlsx": "^0.10.8"
-  }
+  },
+  "devDependencies": {}
 }
