--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "mongoose": "^5.3.11",
-    "njwt": "^0.4.0"
+    "njwt": "^0.4.0",
+    "secure-random": "^1.1.1"
   }
 }
